--- a/index.html
+++ b/index.html
@@ -3,13 +3,32 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!--font awasome and google font-->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" 
+     integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="Description" content="Enter your description here"/>
 
 <link rel="stylesheet" href="assets/css/style.css">
-<title>Title</title>
+<title>Love Maths</title>
 </head>
 <body>
+    <h1 class="heading">
+        <img class="logo" src="assets/images/logo.png" alt="logo">Love Maths
+    </h1>
+
+    <div class="game-area">
+
+    </div>
+
+    <div class="score-area">
+        <p class="scores">Correct Answers <span id="score">0</span></p>
+        <p class="scores"> Incorrect Answers <span id="Incorrect">0</span></p>
+
+
+    </div>
 
 <script src="assets/js/script.js"></script>
 
